# gradescope_local

./: Cargo.toml  README.md
rsrc/: dockerfile.gradescope.in  run_local.sh
src/: docker.rs  gradescope.rs  main.rs  results.rs
